--- a/input.html
+++ b/input.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Alumni Profile Update</title>
+    <title>Alumni Profile</title>
     <!-- Include Bootstrap CSS (You can use a CDN or download and host the file) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
